--- a/firestarter/pubspec.yaml
+++ b/firestarter/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   go_router: ^14.2.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  provider: ^6.1.2
+  firebase_ui_auth: ^1.13.0
 
 dev_dependencies:
   flutter_test:
